replaced dummy data with live site info for beneaural

--- a/public/css/_about.css
+++ b/public/css/_about.css
@@ -2,17 +2,17 @@
 Error: Undefined variable: "$blue".
         on line 12 of _about.scss
 
-7: 						li{
-8: 							border-radius:0.2em;
-9: 							border-bottom-left-radius:0;
-10: 							color:white;
-11: 							padding:0.7vw;
-12: 							background-color:$blue;
-13: 						}
-14: 						li:hover{
-15: 							-webkit-transform:scale(1.04);
-16: 							        transform:scale(1.04);
-17: 							box-shadow:0.1em 0.1em 0.3em $sup-op-black;
+7:                         li {
+8:                             border-radius: 0.2em;
+9:                             border-bottom-left-radius: 0;
+10:                             color: white;
+11:                             padding: 0.7vw;
+12:                             background-color: $blue;
+13:                         }
+14:                         li:hover {
+15:                             -webkit-transform: scale(1.04);
+16:                             -ms-transform: scale(1.04);
+17:                             transform: scale(1.04);
 
 Backtrace:
 _about.scss:12
@@ -121,16 +121,17 @@ _about.scss:12
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:294:in `watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin.rb:109:in `method_missing'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:360:in `watch_or_update'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
+/usr/local/bin/scss:23:in `load'
+/usr/local/bin/scss:23:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$blue\".\A         on line 12 of _about.scss\A \A 7: 						li{\A 8: 							border-radius:0.2em;\A 9: 							border-bottom-left-radius:0;\A 10: 							color:white;\A 11: 							padding:0.7vw;\A 12: 							background-color:$blue;\A 13: 						}\A 14: 						li:hover{\A 15: 							-webkit-transform:scale(1.04);\A 16: 							        transform:scale(1.04);\A 17: 							box-shadow:0.1em 0.1em 0.3em $sup-op-black;"; }
+  content: "Error: Undefined variable: \"$blue\".\A         on line 12 of _about.scss\A \A 7:                         li {\A 8:                             border-radius: 0.2em;\A 9:                             border-bottom-left-radius: 0;\A 10:                             color: white;\A 11:                             padding: 0.7vw;\A 12:                             background-color: $blue;\A 13:                         }\A 14:                         li:hover {\A 15:                             -webkit-transform: scale(1.04);\A 16:                             -ms-transform: scale(1.04);\A 17:                             transform: scale(1.04);"; }
