--- a/public/html/views/proj.pug
+++ b/public/html/views/proj.pug
@@ -1,11 +1,15 @@
 #projPage
 	.card
 		section.body
-			img(src="./img/bNural-2.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.85s").vert.vert2.wow.fadeInLeft
-			img(src="./img/bNural-3.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.65s").hor.hor1.wow.fadeInLeft
-			img(src="./img/bNural.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.45s").vert.vert1.wow.fadeInLeft
+			a(href="http://beneural.com/"  target="_blank")
+				img(src="./img/bNural-2.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.85s").vert.vert2.wow.fadeInLeft
+			a(href="http://beneural.com/"  target="_blank")
+				img(src="./img/bNural-3.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.65s").hor.hor1.wow.fadeInLeft
+			a(href="http://beneural.com/"  target="_blank")
+				img(src="./img/bNural.png", alt="A broken pic..", data-wow-duration="0.4s", data-wow-delay="0.45s").vert.vert1.wow.fadeInLeft
 			article(data-wow-duration="1s").wow.fadeIn
-				h4 BeNeural.com
+				a(href="http://beneural.com/"  target="_blank")
+					h4 BeNeural.com
 				p A bi-neural beat generator
 				p Uses the web audio api to create oscillating sine waves that can affect the user's mental state.
 				p Provides a free alternative to high data usage video streams.
