--- a/public/css/_contact.css
+++ b/public/css/_contact.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$highlight-shadow".
-        on line 15 of _contact.scss
+        on line 12 of _contact.scss
 
-10: 
-11: 	    justify-content:space-around;
-12: 	#deets:hover{
-13: 		-webkit-transform:scale(1.007);
-14: 		        transform:scale(1.007);
-15: 		box-shadow:0.3vw 0.3vw 0.8vw $highlight-shadow;
-16: 	}
-17: 	#deets{
-18: 
-19: 		-webkit-transition:box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
-20: 
+7:     justify-content: space-around;
+8:     #deets:hover {
+9:         -webkit-transform: scale(1.007);
+10:         -ms-transform: scale(1.007);
+11:         transform: scale(1.007);
+12:         box-shadow: 0.3vw 0.3vw 0.8vw $highlight-shadow;
+13:     }
+14:     #deets {
+15:         transition: box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
+16:         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+17:         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;
 
 Backtrace:
-_contact.scss:15
+_contact.scss:12
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -70,16 +70,17 @@ _contact.scss:15
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:294:in `watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin.rb:109:in `method_missing'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:360:in `watch_or_update'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
+/usr/local/bin/scss:23:in `load'
+/usr/local/bin/scss:23:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$highlight-shadow\".\A         on line 15 of _contact.scss\A \A 10: \A 11: 	    justify-content:space-around;\A 12: 	#deets:hover{\A 13: 		-webkit-transform:scale(1.007);\A 14: 		        transform:scale(1.007);\A 15: 		box-shadow:0.3vw 0.3vw 0.8vw $highlight-shadow;\A 16: 	}\A 17: 	#deets{\A 18: \A 19: 		-webkit-transition:box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;\A 20: "; }
+  content: "Error: Undefined variable: \"$highlight-shadow\".\A         on line 12 of _contact.scss\A \A 7:     justify-content: space-around;\A 8:     #deets:hover {\A 9:         -webkit-transform: scale(1.007);\A 10:         -ms-transform: scale(1.007);\A 11:         transform: scale(1.007);\A 12:         box-shadow: 0.3vw 0.3vw 0.8vw $highlight-shadow;\A 13:     }\A 14:     #deets {\A 15:         transition: box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;\A 16:         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;\A 17:         transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out, -webkit-transform 0.3s ease-in-out;"; }
