--- a/public/css/_home.css
+++ b/public/css/_home.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$black".
-        on line 45 of _home.scss
+        on line 35 of _home.scss
 
-40: 			}
-41: 			article{
-42: 
-43: 				padding:3vh 0;
-44: 
-45: 				border-bottom: 2px $black solid;
-46: 
-47: 				p{
-48: 					font-family: 'Sintony', sans-serif;
-49: 				}
-50: 				i{
+30:                 border-bottom-right-radius: 0.25em;
+31:                 box-shadow: 0 0 1em black;
+32:             }
+33:             article {
+34:                 padding: 3vh 0;
+35:                 border-bottom: 2px $black solid;
+36:                 p {
+37:                     font-family: 'Sintony', sans-serif;
+38:                 }
+39:                 i {
+40:                     font-size: 10vw;
 
 Backtrace:
-_home.scss:45
+_home.scss:35
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -92,16 +92,17 @@ _home.scss:45
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:294:in `watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin.rb:109:in `method_missing'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:360:in `watch_or_update'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
+/usr/local/bin/scss:23:in `load'
+/usr/local/bin/scss:23:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$black\".\A         on line 45 of _home.scss\A \A 40: 			}\A 41: 			article{\A 42: \A 43: 				padding:3vh 0;\A 44: \A 45: 				border-bottom: 2px $black solid;\A 46: \A 47: 				p{\A 48: 					font-family: 'Sintony', sans-serif;\A 49: 				}\A 50: 				i{"; }
+  content: "Error: Undefined variable: \"$black\".\A         on line 35 of _home.scss\A \A 30:                 border-bottom-right-radius: 0.25em;\A 31:                 box-shadow: 0 0 1em black;\A 32:             }\A 33:             article {\A 34:                 padding: 3vh 0;\A 35:                 border-bottom: 2px $black solid;\A 36:                 p {\A 37:                     font-family: 'Sintony', sans-serif;\A 38:                 }\A 39:                 i {\A 40:                     font-size: 10vw;"; }
