--- a/public/css/_queries.css
+++ b/public/css/_queries.css
@@ -1,21 +1,21 @@
 /*
 Error: Undefined variable: "$blue".
-        on line 49 of _queries.scss
+        on line 45 of _queries.scss
 
-44: 				    -ms-flex-align: center;
-45: 				        align-items: center;
-46: 				header{
-47: 					width:80vw;
-48: 					text-align:center;
-49: 					border:solid 0.3em $blue;
-50: 				}
-51: 				article{
-52: 					margin-bottom:5vh;
-53: 					width:100vw;
-54: 					display:-webkit-box;
+40:                 -webkit-align-items: center;
+41:                 align-items: center;
+42:                 header {
+43:                     width: 80vw;
+44:                     text-align: center;
+45:                     border: solid 0.3em $blue;
+46:                 }
+47:                 article {
+48:                     margin-bottom: 5vh;
+49:                     width: 100vw;
+50:                     display: -ms-flexbox;
 
 Backtrace:
-_queries.scss:49
+_queries.scss:45
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/variable.rb:49:in `_perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/node.rb:58:in `perform'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/script/tree/list_literal.rb:63:in `block in _perform'
@@ -106,16 +106,17 @@ _queries.scss:49
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:215:in `block in update_stylesheets'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `each'
 /Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:209:in `update_stylesheets'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:473:in `on_file_changed'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:331:in `block in watch'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:252:in `on_change'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/listener.rb:290:in `block in initialize_adapter'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `call'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapters/polling.rb:48:in `poll_changed_directories'
-/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/vendor/listen/lib/listen/adapter.rb:299:in `block in start_poller'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin/compiler.rb:294:in `watch'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/plugin.rb:109:in `method_missing'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:360:in `watch_or_update'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/sass_scss.rb:51:in `process_result'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:52:in `parse'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/lib/sass/exec/base.rb:19:in `parse!'
+/Library/Ruby/Gems/2.0.0/gems/sass-3.4.22/bin/scss:13:in `<top (required)>'
+/usr/local/bin/scss:23:in `load'
+/usr/local/bin/scss:23:in `<main>'
 */
 body:before {
   white-space: pre;
   font-family: monospace;
-  content: "Error: Undefined variable: \"$blue\".\A         on line 49 of _queries.scss\A \A 44: 				    -ms-flex-align: center;\A 45: 				        align-items: center;\A 46: 				header{\A 47: 					width:80vw;\A 48: 					text-align:center;\A 49: 					border:solid 0.3em $blue;\A 50: 				}\A 51: 				article{\A 52: 					margin-bottom:5vh;\A 53: 					width:100vw;\A 54: 					display:-webkit-box;"; }
+  content: "Error: Undefined variable: \"$blue\".\A         on line 45 of _queries.scss\A \A 40:                 -webkit-align-items: center;\A 41:                 align-items: center;\A 42:                 header {\A 43:                     width: 80vw;\A 44:                     text-align: center;\A 45:                     border: solid 0.3em $blue;\A 46:                 }\A 47:                 article {\A 48:                     margin-bottom: 5vh;\A 49:                     width: 100vw;\A 50:                     display: -ms-flexbox;"; }
