--- a/public/css/_trans.css
+++ b/public/css/_trans.css
@@ -2,17 +2,17 @@
 #home {
   /* about me button scaling on hover*/ }
   #home #aboutMe header {
-    -webkit-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out; }
   #home #aboutMe header:hover {
     -webkit-transform: scale(1.01);
+    -ms-transform: scale(1.01);
     transform: scale(1.01); }
 
 #home #aboutMe article .content a p {
-  -webkit-transition: all, 0.1s, ease-in;
   transition: all, 0.1s, ease-in; }
 #home #aboutMe article .content a p:hover {
   -webkit-transform: scale(1.05);
+  -ms-transform: scale(1.05);
   transform: scale(1.05); }
 
 /*# sourceMappingURL=_trans.css.map */
