made about page description more accurate

--- a/public/html/views/about.pug
+++ b/public/html/views/about.pug
@@ -6,8 +6,11 @@
 
 				article(data-wow-duration="1s").wow.fadeIn
 					h2 Hi I'm Josh Peterson
-					h4 I'm a recent graduate of Devmountain
-					h4 Honing my Web Development skills.
+					h4 Currently working at Usana as a test analyst.
+					h4 Devmountain (SANE stack Bootcamp) grad. 
+					h4 Looking to transition into a development role. 
+					h4 Passionate about UX-UI.
+					
 		section.body
 			article(data-wow-delay="2.2s").wow.fadeIn
 				ul
